tests/miniJava/neg/000309_mutation.MiniJava
class java { public static void Main ( int [ ] java ) { { } } }
